# BackgroundAnnotator

./: app.spec  pyproject.toml
src/backgroundannotator/: __init__.py  __main__.py  app.py
src/backgroundannotator/services/: background.py  explorer.py
src/backgroundannotator/userinterface/: mainwindow.py
